# plfit

./: .all-contributorsrc  .bzrignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS.md  CONTRIBUTORS.txt  Makefile.am  README.rst  configure.ac  libplfit.pc.in  plfit.pc.in  plfit.tailor  tbump.toml
.github/workflows/: build.yml
data/: Makefile.am  README.rst  continuous_data.txt  discrete_data.txt  underflow_regression_test_1.txt  underflow_regression_test_2.txt
doc/: Makefile.am  THANKS
etc/cmake/: helpers.cmake  lto.cmake
etc/scripts/: update_contributors_txt.py
include/: plfit_decls.h  plfit_version.h.in
src/: CMakeLists.txt  Makefile.am  config.h.in  error.c  error.h  getopt.c  getopt.h  gss.c  hzeta.c  kolmogorov.c  kolmogorov.h  lbfgs.c  libversion.c  main.c  mt.c  mt.h  options.c  platform.c  platform.h  plfit.c  plfit.h  plfit.i  plfit.map  plfit_decls.h  plfit_error.h  plfit_mt.h  plfit_sampling.h  plfit_version.h.in  plgen.c  rbinom.c  sampling.c  sampling.h  stats.c  test.c  version.c  zeta.c  zeta.h
test/: CMakeLists.txt  CMakeLists.txt.orig  Makefile.am  README.rst  test_common.c  test_common.h  test_continuous.c  test_discrete.c  test_gss.c  test_hzeta.c  test_kolmogorov.c  test_python_module.py  test_real.c  test_sampling.c  test_underflow_handling.c  test_xmin_too_low.c
