## plfit/data/Makefile.am -- AutoMake metafile
## plfit - fitting power-law distributions to empirical data
## Copyright (C) 2018 Tamas Nepusz
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 3 of the License, or (at
## your option) any later version.
##
## This program is distributed in the hope that it will be useful, but
## WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
## General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
##

EXTRA_DIST = \
	celegans-indegree.dat \
	celegans-outdegree.dat \
	celegans-totaldegree.dat \
	condmat2005-degree.dat \
	karate-commented_corrupted.dat \
	karate-commented.dat \
	karate-commented_dos.dat \
	karate.dat \
	continuous_data.txt \
	discrete_data.txt \
	underflow_regression_test_1.txt \
	underflow_regression_test_2.txt \
	README.rst

##
## eos
